--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       padding: 20px;
       background-color: #f2f2f2;
     }
+  <iframe src="https://giphy.com/embed/GTJFIAnmAdrnsmXcO7" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/space-endless-astronomy-GTJFIAnmAdrnsmXcO7">via GIPHY</a></p>
   </style>
 </head>
 <body>
