--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
   <h2>Specific Conductance Calculator</h2>
-  <img src="https://giphy.com/embed/GTJFIAnmAdrnsmXcO7" alt="background-GIF" id="background-gif">
+  <img src="tenor.gif" alt="background-GIF" id="background-gif">
   <forbody {
   background-color: black; /* Optionally set a background color */
 }
