--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 </head>
 <body>
   <h2>Specific Conductance Calculator</h2>
-  <img src="tenor.gif" alt="background-GIF" id="background-gif">
+  <img src="/main/tenor.gif" alt="background-GIF" id="background-gif">
   <forbody {
   background-color: black; /* Optionally set a background color */
 }
 
-#background-video {
+#background-GIF {
   position: fixed;
   top: 0;
   left: 0;
