--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       padding: 20px;
       background-color: #f2f2f2;
     }
+    body { background-image:url('tenor.gif'); background-repeat:repeat; }
     #background-GIF {
     position: fixed;
     top: 0;
