--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ button[type="submit"]:hover {
   padding: 20px;
   background-color: #f2f2f2;
 }
-body { background-image:url('tenor.gif'); background-size:100%; }
+body { background-image:url('tenor.gif'); background-size:100%; background-repeat:none;}
 /* Removed duplicate background styling */
 </style>
 </head>
